Fri Jan 24 2014
1. Bug fixing
   * Fixed bug in Untoggle which was mis-assigning names to categories
2. Changes
   * Tested the package running on MLwiN v2.29; now changed default MLwiNPath
   
Thu Nov 21 2013
1. Bug fixing
   * sixway now allows user to specify some graphic parameters (see par()); This fixes errors, e.g., "figure margins too large".
   * Corrected error when workdir path contains spaces in ws2foreign.r.
   * fixed a bug in Formula.translate. The backward compatibility was not working; this has been removed since we support R 2.14.0 onwards.
   * Write.dta now saves as version=10 to circumvent problem of MLwiN mishandling missing values in .dta files saved under earlier versions of Stata. (Although this will be addressed in future release of MLwiN.)

2. Changes
   * Added an option to use R formula objects (i.e., without quotes around the character formula). NOTE that if an R formula is used, 0c, 0s,..., have to be changed to `0c`, `0s`,.... Any curly bracket, {}, has to be changed to a round bracket, ().
   * Added an update method for mlwinfitIGLS and mlwinfitMCMC class objects.
   * Added some example datasets and their related help files.
   * predLines(i.e., predLines1 & predLines2) and predCurves(i.e., predLines3) now depend on lattice package.

Fri Sep 06 2013
1. Bug fixing
   * When a model is run using MCMC, iterations (as set by the user in mcmcMeth) now refers to total chain run (post-burnin), rather than stored iterations only (relevant when thinning >1).
   * An MLwiN MCMC run no longer redundantly occurs when use BUGO with EstM=1 (e.g. when setting mcmcOptions).
   * Changed assignment of BUGO arguments from being solely determined by the order in which they're written, to instead determined by keywords.
   * MCSE algorithm now handles thinning appropriately.
   * sixway now handles thinning appropriately, and also swapped trace plot axis labels so that now correctly-labelled.